{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 164,
  "lineage": "40a80978-2d2a-1676-d605-d79e6fb98109",
  "resources": [
    {
      "module": "module.networking.module.vpc_virginia",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb5f4dee5c51f085",
            "domain": "vpc",
            "id": "eipalloc-0cb5f4dee5c51f085",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-166-239-244.us-west-2.compute.amazonaws.com",
            "public_ip": "35.166.239.244",
            "public_ipv4_pool": "amazon",
            "tags": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-us-west-2a",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "tags_all": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-us-west-2a",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking.module.vpc_virginia",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:267693165925:internet-gateway/igw-01c82d3d12207b6ba",
            "id": "igw-01c82d3d12207b6ba",
            "owner_id": "267693165925",
            "tags": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "tags_all": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "vpc_id": "vpc-0599d284df41474f4"
          },
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc_virginia",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb5f4dee5c51f085",
            "connectivity_type": "public",
            "id": "nat-08171cd5932dc2239",
            "network_interface_id": "eni-091ea51104fef41d1",
            "private_ip": "10.22.128.21",
            "public_ip": "35.166.239.244",
            "subnet_id": "subnet-033258ad2f9fa1cfd",
            "tags": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-us-west-2a",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "tags_all": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-us-west-2a",
              "NumberReg": "000001",
              "Team": "TCC"
            }
          },
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_eip.nat",
            "module.networking.module.vpc_virginia.aws_internet_gateway.this",
            "module.networking.module.vpc_virginia.aws_subnet.public",
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc_virginia",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01a33d1aae15997b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08171cd5932dc2239",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a33d1aae15997b9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_eip.nat",
            "module.networking.module.vpc_virginia.aws_internet_gateway.this",
            "module.networking.module.vpc_virginia.aws_nat_gateway.this",
            "module.networking.module.vpc_virginia.aws_route_table.private",
            "module.networking.module.vpc_virginia.aws_subnet.public",
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc_virginia",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01c82d3d12207b6ba",
            "id": "r-rtb-071443780166122951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07144378016612295",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_internet_gateway.this",
            "module.networking.module.vpc_virginia.aws_route_table.public",
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc_virginia",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:267693165925:route-table/rtb-01a33d1aae15997b9",
            "id": "rtb-01a33d1aae15997b9",
            "owner_id": "267693165925",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-private-us-west-2a",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "tags_all": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-private-us-west-2a",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0599d284df41474f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc_virginia",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:267693165925:route-table/rtb-07144378016612295",
            "id": "rtb-07144378016612295",
            "owner_id": "267693165925",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-public",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "tags_all": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-public",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0599d284df41474f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc_virginia",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0333e15c5dc74c31d",
            "route_table_id": "rtb-01a33d1aae15997b9",
            "subnet_id": "subnet-02a73435a49734a88"
          },
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_route_table.private",
            "module.networking.module.vpc_virginia.aws_subnet.private",
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03201f623b149a1d2",
            "route_table_id": "rtb-01a33d1aae15997b9",
            "subnet_id": "subnet-0f5f6ee45b05e7483"
          },
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_route_table.private",
            "module.networking.module.vpc_virginia.aws_subnet.private",
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd8f2eae5a4aab2d",
            "route_table_id": "rtb-01a33d1aae15997b9",
            "subnet_id": "subnet-0fec6f05b6e930101"
          },
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_route_table.private",
            "module.networking.module.vpc_virginia.aws_subnet.private",
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc_virginia",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05161516043d7eaa6",
            "route_table_id": "rtb-07144378016612295",
            "subnet_id": "subnet-033258ad2f9fa1cfd"
          },
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_route_table.public",
            "module.networking.module.vpc_virginia.aws_subnet.public",
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcdee5f66d902603",
            "route_table_id": "rtb-07144378016612295",
            "subnet_id": "subnet-002b576b7db243e32"
          },
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_route_table.public",
            "module.networking.module.vpc_virginia.aws_subnet.public",
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e6f4416a80bdd3c",
            "route_table_id": "rtb-07144378016612295",
            "subnet_id": "subnet-0ab1a4ac51dba1769"
          },
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_route_table.public",
            "module.networking.module.vpc_virginia.aws_subnet.public",
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc_virginia",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:267693165925:subnet/subnet-02a73435a49734a88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.22.128.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a73435a49734a88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267693165925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-private-us-west-2a",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "tags_all": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-private-us-west-2a",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "vpc_id": "vpc-0599d284df41474f4"
          },
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:267693165925:subnet/subnet-0f5f6ee45b05e7483",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.22.128.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5f6ee45b05e7483",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267693165925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-private-us-west-2b",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "tags_all": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-private-us-west-2b",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "vpc_id": "vpc-0599d284df41474f4"
          },
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:267693165925:subnet/subnet-0fec6f05b6e930101",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.22.128.64/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fec6f05b6e930101",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267693165925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-private-us-west-2c",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "tags_all": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-private-us-west-2c",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "vpc_id": "vpc-0599d284df41474f4"
          },
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc_virginia",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:267693165925:subnet/subnet-033258ad2f9fa1cfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.22.128.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033258ad2f9fa1cfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267693165925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-public-us-west-2a",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "tags_all": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-public-us-west-2a",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "vpc_id": "vpc-0599d284df41474f4"
          },
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:267693165925:subnet/subnet-002b576b7db243e32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.22.128.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002b576b7db243e32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267693165925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-public-us-west-2b",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "tags_all": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-public-us-west-2b",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "vpc_id": "vpc-0599d284df41474f4"
          },
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:267693165925:subnet/subnet-0ab1a4ac51dba1769",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.22.128.80/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab1a4ac51dba1769",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267693165925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-public-us-west-2c",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "tags_all": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc-public-us-west-2c",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "vpc_id": "vpc-0599d284df41474f4"
          },
          "dependencies": [
            "module.networking.module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc_virginia",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:267693165925:vpc/vpc-0599d284df41474f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.22.128.0/25",
            "default_network_acl_id": "acl-0ab19c992d8cfcecf",
            "default_route_table_id": "rtb-0254c10037518eda6",
            "default_security_group_id": "sg-04af910a31a6d1783",
            "dhcp_options_id": "dopt-0e284c8bb09aded40",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0599d284df41474f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0254c10037518eda6",
            "owner_id": "267693165925",
            "tags": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc",
              "NumberReg": "000001",
              "Team": "TCC"
            },
            "tags_all": {
              "BU": "Gerencia de Desarrollo Agil",
              "Cloud": "AWS",
              "CostCenter": "9937",
              "Deploy": "Terraform",
              "Description": "Credito Comercial",
              "Name": "tcc-vpc",
              "NumberReg": "000001",
              "Team": "TCC"
            }
          }
        }
      ]
    }
  ]
}